[package]
name = "qs_to_body"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
axum = { version = "0.8", default-features = false, features = ["tokio", "http1"] }
tokio = { version = "1", default-features = false, features = ["macros", "rt-multi-thread", "net"] }
url = { version = "2", default-features = false }

[profile.release]
strip = true
panic = "abort"
lto = true
codegen-units = 1
